--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <li>Become a confident web developer</li>
             <li>Create real projects</li>
             <li>Build a strong portfolio</li>
+            <li>Learn CSS Today</li>
         </ul>
         <a href=""https://github.com/priscillah-oss" target="blank">My GitHub</a>
     </body>
