--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <h1>My Profile</h1>
 
-        <img src="C:\Users\admin\OneDrive\Documents\Web Projects\First_Website\Images\website.png" alt="Profile photo">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSsh-tIPRBkNo5RPapY0nMY-ibFkKkBOhS-4A&s" alt="Profile photo">
         <p>Hello! My name is P, and I am learning web development one day at a time.</p>
         <h2>My Goals</h2>
         <ul>
