--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
        <title>My Profile Page</title>
+       <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>My Profile</h1>
@@ -16,6 +17,7 @@
             <li>Learn CSS Today</li>
         </ul>
         <a href=""https://github.com/priscillah-oss" target="blank">My GitHub</a>
+       <p> <button>Learnmore</button> </p>
     </body>
 
 </html>
