Added image and improved layout

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>My Profile</h1>
+        <div class="container">
+        <h1>Welcome to My Profile Page</h1>
 
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSsh-tIPRBkNo5RPapY0nMY-ibFkKkBOhS-4A&s" alt="Profile photo">
+        <img src="images/profile.png" alt="My Profile Picture" class="profile-img">
         <p>Hello! My name is P, and I am learning web development one day at a time.</p>
         <h2>My Goals</h2>
         <ul>
@@ -16,8 +17,17 @@
             <li>Build a strong portfolio</li>
             <li>Learn CSS Today</li>
         </ul>
+
+        <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Git</li>
+        </ul>
         <a href=""https://github.com/priscillah-oss" target="blank">My GitHub</a>
-       <p> <button>Learnmore</button> </p>
+       
+       
+        <button>Click Me</button>
+        </div>
     </body>
 
 </html>
