Adding Missing heading

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <li>Become a confident web developer</li>
             <li>Create real projects</li>
             <li>Build a strong portfolio</li>
-            <li>Learn CSS Today</li>
+            <li>Learn CSS </li>
         </ul>
-
+<h2>Skills</h2>
         <ul>
             <li>HTML</li>
             <li>CSS</li>
