--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <li>CSS</li>
             <li>Git</li>
         </ul>
-        <a href=""https://github.com/priscillah-oss" target="blank">My GitHub</a>
+        <a href="https://github.com/priscillah-oss" target="blank">
+        <button>Click Me</button></a>
        
        
-        <button>Click Me</button>
         </div>
     </body>
 
