--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <div class="container">
         <h1>Welcome to My Profile Page</h1>
 
-        <img src="images/profile.png" alt="My Profile Picture" class="profile-img">
+        <img src="Images/profile.png" alt="My Profile Picture" class="profile-img">
         <p>Hello! My name is P, and I am learning web development one day at a time.</p>
         <h2>My Goals</h2>
         <ul>
