--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
        <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <nav class="navbar">
+            <h2 class="logo">My Portfolio</h2>
+            <ul class="nav-links">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Contact</a></li>
+
+            </ul>
+        </nav>
         <div class="container">
         <h1>Welcome to My Profile Page</h1>
 
