Improve navbar layout & accessibility

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <nav class="navbar">
+        <nav class="navbar" role="navigation" aria-label="Main navigation">
             <h2 class="logo">My Portfolio</h2>
             <ul class="nav-links">
                 <li><a href="#">Home</a></li>
