adding the flexbox

--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
        
        
         </div>
+        <div class="flex-container">
+            <div class="box">Box 1</div>
+            <div class="box">Box 2</div>
+            <div class="box">Box 3</div>
+        </div>
     </body>
 
 </html>
