Conatct page added

--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
             <div class="box">Box 2</div>
             <div class="box">Box 3</div>
         </div>
+
+        <section class="contact">
+            <h2>Contact Me</h2>
+            <p>If you would like to reach out, feel free to send me an email.</p>
+            <a href="mailto:your-email@example.com" class="contact-btn">Send Email</a>
+        </section>
     </body>
 
 </html>
