Day 10: Added footer section

--- a/index.html
+++ b/index.html
@@ -48,8 +48,12 @@
         <section class="contact">
             <h2>Contact Me</h2>
             <p>If you would like to reach out, feel free to send me an email.</p>
-            <a href="mailto:your-email@example.com" class="contact-btn">Send Email</a>
+            <a href="mailto:priscillahnyamhinda@gmail.com" class="contact-btn">Send Email</a>
         </section>
+        <footer>
+            <p>&copy; 2025 P's Portfolio | All Rights Reserved</p>
+            <p>Contact me: <a href="mailto:priscillahnyamhinda@gmail.com">priscillahnyamhinda@gmail.com</a></p>
+        </footer>
     </body>
 
 </html>
