--- a/index.html
+++ b/index.html
@@ -45,6 +45,18 @@
             <div class="box">Box 3</div>
         </div>
 
+        <section class="skills">
+            <h2>My Skills</h2>
+            <ul>
+                <li>HTML & CSS</li>
+                <li>Flexbox & Responsive Design</li>
+                <li>Web Accessibility</li>
+                <li>Customer relations & Administration</li>
+                <li>Immigration Advisory Support</li>
+                <li>Healthcare & Suport Work</li>
+            </ul>
+        </section>
+
         <section class="contact">
             <h2>Contact Me</h2>
             <p>If you would like to reach out, feel free to send me an email.</p>
