Day 12: Added projects section with responsive cards

--- a/index.html
+++ b/index.html
@@ -56,6 +56,31 @@
                 <li>Healthcare & Suport Work</li>
             </ul>
         </section>
+        <section class="projects" id="projects">
+            <h2>Projects</h2>
+            <div class="projects-grid">
+                <article class="project-card">
+                    <p>Simple git & terminal exercises demonstrating version control basics.</p>
+                    <p class="tags"><span>HTML</span><span>Git</span></p>
+                    <a href="https://github.com/priscillah-oss/terminal-practice" target="_blank" rel="noopener noreferrer" class="project-link">View on GitHub</a>
+                </article>
+            </div>
+        </section>
+        <article class="project-card">
+      <h3>Landing Page</h3>
+      <p>Responsive landing page built with semantic HTML and CSS; mobile-first layout.</p>
+      <p class="tags"><span>HTML</span> <span>CSS</span></p>
+      <a href="https://github.com/priscillah-oss/landing-page" target="_blank" rel="noopener noreferrer" class="project-link">View on GitHub</a>
+    </article>
+
+    <article class="project-card">
+      <h3>Profile Page</h3>
+      <p>Personal portfolio page showing skills, contact, and projects — built from scratch.</p>
+      <p class="tags"><span>HTML</span> <span>CSS</span></p>
+      <a href="https://github.com/priscillah-oss/profile-page" target="_blank" rel="noopener noreferrer" class="project-link">View on GitHub</a>
+    </article>
+  </div>
+</section>
 
         <section class="contact">
             <h2>Contact Me</h2>
